compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__alternative_patterns.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn main(xs) {\n  case xs {\n    1 | 2 -> 0\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(xs) {
  case xs {
    1 | 2 -> 0
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
export function main(xs) {
  if (xs === 1n) {
    return 0n;
  } else if (xs === 2n) {
    return 0n;
  } else {
    return 1n;
  }
}
